src/test/resources/examples/invalid/IncompleteFXCopy.fxml
<?import javafx.scene.layout.VBox?>
<fx:root type="VBox" xmlns:fx="http://javafx.com/fxml">
    <VBox fx:id="testing"/>
    <fx:copy/>
</fx:root>